--- a/stonePaperScissors.html
+++ b/stonePaperScissors.html
@@ -9,13 +9,13 @@
 <body>
     <h1>Stone Paper Scissors game</h1>
     <div class="choices">
-        <div class="choice" id="rock">
+        <div class="choice" id="Rock">
             <img src="rock.png">
         </div>
-        <div class="choice" id="paper">
+        <div class="choice" id="Paper">
             <img src="paper.png">
         </div>
-        <div class="choice" id="scissors">
+        <div class="choice" id="Scissor">
             <img src="scissors.png">
         </div>
     </div>
